--- a/maji/todo.txt
+++ b/maji/todo.txt
@@ -1,18 +1,16 @@
 -Water User
     - if bad text, ask for better
     - if good text, give results
+        - log results
 - Data
     - Sort results by location
     - paginate results
     - make results downloadable in csv form
     - INFO ON HOME PAGE
 - Admin
-    - add flash messages to login and sign up pages
-    - add test text function to device page
     - form validation on create and update (with flash messages)
 - Style
     - fix menu spacing
     - fix login padding
     - fix devices table paddding
-    - make update form more permanent looking
     
